--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
           </h1>
           <p class="text-xl md:text-2xl text-gray-600 max-w-2xl mb-8">
             De 3 ani realizez cu pasiune atestate profesionale de informatica,
-            folosindu-ma de tehnologii web, precum HTML, CSS si JavaScript.
+            folosindu-ma de tehnologii web, precum HTML, CSS si JavaScript, sau
+            chiar C#.
           </p>
           <p class="text-xl md:text-2xl text-gray-600 max-w-2xl mb-8">
             Daca ai intrebari, nu ezita sa ma contactezi!
@@ -140,15 +141,6 @@
         <h2 class="text-4xl font-bold mb-12 gradient-text">
           ATESTATE FINALIZATE ( + documentatie inclusa )
         </h2>
-        <p class="text-l md:text-xl text-gray-600 max-w-xl mb-8">
-          Pretul unui atestat finalizat este intre 70-120 lei
-        </p>
-        <p class="text-l md:text-xl text-gray-600 max-w-xl mb-8">
-          Pretul unui atestat personalizat este intre 120-150 lei
-        </p>
-        <p class="text-l md:text-xl text-gray-600 max-w-xl mb-8">
-          Documentatia word si pdf este in valoare de 30
-        </p>
         <div
           class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 photo-grid"
         >
@@ -192,7 +184,45 @@
               <p class="text-gray-600">Calculator functional si logic</p>
             </div>
           </div>
-
+          <div
+            class="gallery-card bg-white rounded-xl overflow-hidden shadow-lg cursor-pointer"
+          >
+            <img
+              src="backgrounds/blupy.png"
+              alt="Project 1"
+              class="w-full h-64 object-cover"
+            />
+            <div class="p-6">
+              <h3 class="text-xl font-semibold mb-2">BLUPY THE FROG</h3>
+              <p class="text-gray-600">C# 2D Unity game</p>
+            </div>
+          </div>
+          <div
+            class="gallery-card bg-white rounded-xl overflow-hidden shadow-lg cursor-pointer"
+          >
+            <img
+              src="backgrounds/coronera.png"
+              alt="Project 1"
+              class="w-full h-64 object-cover"
+            />
+            <div class="p-6">
+              <h3 class="text-xl font-semibold mb-2">CORON-ERA</h3>
+              <p class="text-gray-600">C# 2D Unity game</p>
+            </div>
+          </div>
+          <div
+            class="gallery-card bg-white rounded-xl overflow-hidden shadow-lg cursor-pointer"
+          >
+            <img
+              src="backgrounds/inferno.png"
+              alt="Project 1"
+              class="w-full h-64 object-cover"
+            />
+            <div class="p-6">
+              <h3 class="text-xl font-semibold mb-2">INFERNO</h3>
+              <p class="text-gray-600">C# 2D Unity game</p>
+            </div>
+          </div>
           <div
             class="gallery-card bg-white rounded-xl overflow-hidden shadow-lg cursor-pointer"
           >
